Changelog for Processeditor
===========================

2024-01-03
* Fixed setProperty for Attributes in DomainClass to keep order on updates

2023-11-06
* Fixed MultiPartParser to only check for two trailing "--" according to RFC1341, see https://www.w3.org/Protocols/rfc1341/7_2_Multipart.html
* Introduced matching Exceptions

2023-11-07
* Added executePostRequest() in JSONHttpRequest

2023-07-24
* Added executeDeleteRequest() in JSONHttpRequest

2020-08-07
* Fixed resizing of editor page

2019-02-17
* Added support for SSL config via www/config/ssl_config.properties
* Added file-system reading of "www/config/ssl_config.properties" first

2018-06-16
* Added constants for JSONExporter fields

2018-06-15
* Fixed #41 Core: Implement JSON Exporter for ProcessModel

2018-06-08
* Forced stereotype of EnumerationClass to only support <<enumeration>>

2018-05-30
* Added EnumerationClass to DomainModel
* Fixed bug in DomainClass that added a "(" to each default value